--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,6 +11,7 @@
       <!-- Fonts -->
       <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ng-tags-input/3.0.0/ng-tags-input.min.css">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.1.0/milligram.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.grey-red.min.css" />
 
@@ -55,8 +56,9 @@
     <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="/bower_components/underscore/underscore.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/async/1.5.2/async.min.js"></script>
-    <script src="http://maps.google.com/maps/api/js"></script>
+    <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
     <script src="/bower_components/ng-map/ng-map.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-tags-input/3.0.0/ng-tags-input.js"></script>
 
     <!-- App Scripts -->
     <script src="assets/js/config.js"></script>
