--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,6 +12,7 @@
       <link href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en" rel="stylesheet">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ng-tags-input/3.0.0/ng-tags-input.min.css">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.0/flexslider.css">
       <link href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.1.0/milligram.min.css" rel="stylesheet">
       <link rel="stylesheet" href="https://code.getmdl.io/1.1.1/material.grey-red.min.css" />
 
@@ -30,6 +31,9 @@
           <!-- Title -->
           <span class="mdl-layout-title">
             <img src="assets/img/head-out.png" />
+          </span>
+          <span class="mdl-layout-title" style="margin-top: 5px">
+            | Dubai
           </span>
           <!-- Add spacer, to align navigation to the right -->
           <div class="mdl-layout-spacer"></div>
@@ -59,6 +63,7 @@
     <script src="https://maps.google.com/maps/api/js?libraries=placeses,visualization,drawing,geometry,places"></script>
     <script src="/bower_components/ng-map/ng-map.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ng-tags-input/3.0.0/ng-tags-input.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/flexslider/2.6.0/jquery.flexslider.min.js"> </script>
 
     <!-- App Scripts -->
     <script src="assets/js/config.js"></script>
